[tool.poetry]
name = "tuan_batch_study"
version = "0.1.0"
description = ""
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
loguru = "^0.5.3"
ujson = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
