[tool.poetry]
name = "tuan_batch_study"
version = "0.1.0"
description = ""
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
loguru = "^0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["tuan_batch_study"]
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
