[tool.poetry]
name = "tuan_batch_study"
version = "0.1.0"
description = ""
authors = ["StarHeartHunt <starheart233@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.24.1"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
isort = "^5.10.1"
black = "^24.2.0"
pre-commit = "^3.3.3"

[tool.black]
preview = true
target-version = ["py312"]
line-length = 88
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.pyright]
extraPaths = ["./"]
pythonVersion = "3.12"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
